--- a/main.html
+++ b/main.html
@@ -76,7 +76,7 @@
   
 <div class="container-fluid text-center">    
   <div class="row content">
-    <div id="subjectsList" class="col-sm-2 sidenav">
+    <div id="typesContainer" class="col-sm-2 sidenav">
       <!---->
     </div>
     <div class="col-sm-8 text-left"> 
