--- a/main.html
+++ b/main.html
@@ -7,14 +7,19 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="node_modules/jquery/dist/core.js"></script>
   <script src="node_modules/jquery/dist/jquery.js"></script>
-  <script src="node_modules/jquery/dist/core.js"></script>
+  <script src="node_modules/underscore/underscore.js"></script>
+  <script src="api.js"></script>
+  <script src="main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-  <script src="main.js" type="text/javascript">
-    $(document).ready(){
-      Main.load();
-    };
+  <script src = "node_modules\jquery\external\sizzle\dist\sizzle.js"></script>
+  <script src = "node_modules/js/bootstrap-datepicker.js"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+            Main.load();
+    });
   </script>
 
   <style>
