--- a/main.html
+++ b/main.html
@@ -109,7 +109,7 @@
 
           <button type="button" onclick="searchEntries()">Search</button>
 
-          <table>
+          <table class="table stable-striped">
             <thead>
               <th>Date</th>
               <th>Provider</th>
