--- a/providers_edit.html
+++ b/providers_edit.html
@@ -123,6 +123,11 @@
 
   <script src="src/api.js"></script>
   <script src="src/provider_edit.js"></script>
+  <script>
+    $(document).ready(function(){
+      ProviderEdit.load();
+    });
+  </script>
 </html>
 
 
