--- a/providers_list.html
+++ b/providers_list.html
@@ -121,6 +121,9 @@
 
   <script src="src/api.js"></script>
   <script src="src/provider_list.js"></script>
+  <script>
+      $(document).ready(ProviderList.load);
+  </script>
 </html>
 
 
