--- a/subjects_edit.html
+++ b/subjects_edit.html
@@ -115,6 +115,9 @@
 
   <script src="src/api.js"></script>
   <script src="src/subject_edit.js"></script>
+  <script>
+    $(document).ready(SubjectEdit.load);
+  </script>
 </html>
 
 
