--- a/subjects_list.html
+++ b/subjects_list.html
@@ -74,7 +74,7 @@
       <ul class="nav navbar-nav">
         <li><a href="main.html">Home</a></li>
         <li class="active"><a href="subjects_list.html">Subjects</a></li>
-        <li><a href="#">Providers</a></li>
+        <li><a href="providers_list.html">Providers</a></li>
       </ul>
     </div>
   </div>
@@ -119,8 +119,10 @@
 </body>
 
   <script src="src/api.js"></script>
-  <script src="src/main.js"></script>
   <script src="src/subject_list.js"></script>
+  <script>
+    $(document).ready(SubjectList.load);
+  </script>
 </html>
 
 
