--- a/providers_list.html
+++ b/providers_list.html
@@ -120,7 +120,7 @@
 </body>
 
   <script src="src/api.js"></script>
-  <script src="src/provider_list.js"></script>
+  <script src="src/provider_list.js?q=143"></script>
   <script>
       $(document).ready(ProviderList.load);
   </script>
