--- a/subjects_list.html
+++ b/subjects_list.html
@@ -119,7 +119,7 @@
 </body>
 
   <script src="src/api.js"></script>
-  <script src="src/subject_list.js"></script>
+  <script src="src/subject_list.js?q=115"></script>
   <script>
     $(document).ready(SubjectList.load);
   </script>
