--- a/providers_edit.html
+++ b/providers_edit.html
@@ -122,7 +122,7 @@
 </body>
 
   <script src="src/api.js"></script>
-  <script src="src/provider_edit.js"></script>
+  <script src="src/provider_edit.js?q=126"></script>
   <script>
     $(document).ready(function(){
       ProviderEdit.load();
