--- a/subjects_edit.html
+++ b/subjects_edit.html
@@ -114,7 +114,7 @@
 </body>
 
   <script src="src/api.js"></script>
-  <script src="src/subject_edit.js"></script>
+  <script src="src/subject_edit.js?q=43"></script>
   <script>
     $(document).ready(SubjectEdit.load);
   </script>
