connec tpart of main to node

--- a/main.html
+++ b/main.html
@@ -157,7 +157,7 @@
 </body>
 
   <script src="src/api.js"></script>
-  <script src="src/main.js"></script>
+  <script src="src/main.js?a=325"></script>
   
   <script>
     $(document).ready(function(){
