--- a/main.html
+++ b/main.html
@@ -156,8 +156,8 @@
 
 </body>
 
-  <script src="src/api.js"></script>
-  <script src="src/main.js?a=325"></script>
+  <script src="src/api.js?a=189"></script>
+  <script src="src/main.js?a=178"></script>
   
   <script>
     $(document).ready(function(){
