--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css?q=123">
+  <link rel="stylesheet" href="css/style.css?q=193">
   <script src="node_modules/jquery/dist/jquery.js"></script>
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -117,7 +117,7 @@
           <p>From date: <input type="text" id="datepickerFrom"></p>
           <p>To date: <input type="text" id="datepickerTo"></p>
           <p>Type: <label id="searchSubtype"></label></p>
-
+          <p>Contains: <input type="text" id="containsSearch"></p>
           <p>Provider: 
           <select id="provDDSearch">
             <option id="any">Any</option>
@@ -174,8 +174,8 @@
 
 </body>
 
-  <script src="src/api.js?a=189"></script>
-  <script src="src/main.js?a=178"></script>
+  <script src="src/api.js?a=182"></script>
+  <script src="src/main.js?a=118"></script>
   
   <script>
     $(document).ready(function(){
