--- a/download_history.html
+++ b/download_history.html
@@ -57,6 +57,19 @@
       }
       .row.content {height:auto;} 
     }
+
+    label{
+        display: block;
+    }
+
+    button{
+        display: block!important;
+        margin: 20px;
+    }
+
+    .form-control{
+        width: 20%;
+    }
   </style>
 </head>
 <body>
@@ -65,35 +78,34 @@
   
 <div class="container-fluid text-center">    
   <div class="row content">
-    <div  class="col-sm-2 sidenav-left">
+    <div id="subjectList" class="col-sm-2 sidenav-left">
     </div>
-    <div class="col-sm-8 text-left main-content" style="left:16.5%;"> 
-        <ul  class="backToPage"> 
-            <li><a href="providers_list.html">Back to Provider List</a> </li>
-        </ul>
-        <h2> Create or Edit a Provider</h2>
+    <div class="col-sm-8 text-left main-content" style="left:16.5%;">         
+        <h2> Download History</h2>
         <hr>
         <p style="display:none" id="errors"></p>
-      <div class="formContainer"><label>Name: </label> <input class="form-control" type="text" id="nameInput"/></div>
-      <div class="formContainer"><label>Type: </label> 
-        <select class="form-control" type="text" id="typeInput">
-          <option value="Vet">Vet</option>
-          <option value="Farrier">Farrier</option>
-          <option value="Trainer">Trainer</option>
-          <option value="Alternative Therapist">Alternative Therapist</option>
-          <option value="Misc">Misc</option>          
+      
+        <label>Select Herd Member:</label>
+        <select class="form-control" type="text" id="forInput">
+            <option value="">Select</option>          
+            <option value="scooter">Scooter</option>
+            <option value="julius">Julius</option>       
         </select>
-        </div>
-      <div class="formContainer"><label>Primary Phone: </label> <input class="form-control" type="text" id="pPhoneInput"/></div>
-      <div class="formContainer"><label>Secondary Phone: </label> <input class="form-control" type="text" id="sPhoneInput"/></div>
-      <div class="formContainer"><label>Clinic/Company: </label> <input class="form-control"type="text" id="compInput"/></div>
-        <div class="buttonContainer">
-            <button class="btn" id="clearBtn">Clear</button>
-            <button class="btn" id="saveBtn">Save</button>
-        </div>
-    </div>
 
-    <div id="categoryList" class="col-sm-2 sidenav-right">
+        <label>From date: </label><input class="form-control" type="text" id="datepickerFrom"></p>
+        <label>To date: </label><input class="form-control" type="text" id="datepickerTo">
+
+        <label>Provider: </label>
+        <select class="form-control" id="provDDSearch">
+            <option id="any">Any</option>
+            <option id="any">Vet 1</option>
+            <option id="any">Vet 2</option>
+            <option id="any">Trainer 1</option>            
+        </select>
+
+        <button id="download" class="btn">Download</button>
+    </div>
+    <div id="subjectList" class="col-sm-2 sidenav-right">
     </div>
   </div>
 </div>
@@ -105,11 +117,11 @@
 
 </body>
   <script src="templating/header.js"></script>
-  <script src="src/api.js?q=126"></script>
-  <script src="src/provider_edit.js?q=126"></script>
+  <script src="src/api.js"></script>
+  <script src="src/download_history.js?q=126"></script>
   <script>
     $(document).ready(function(){
-      ProviderEdit.load();
+      DownloadHistory.load();
     });
   </script>
 </html>
