--- a/subjects_edit.html
+++ b/subjects_edit.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Treeskin</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css?q=332">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="node_modules/jquery/dist/jquery.js"></script>
-  <script src="node_modules/underscore/underscore.js"></script>
-
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-
-  <script src = "node_modules\jquery\external\sizzle\dist\sizzle.js"></script>
-  <script src = "node_modules/js/bootstrap-datepicker.js"></script>
-
+    <title>Treeskin</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css?q=19mocha tutorial with nodejs
+    3">
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+    <script src="node_modules/bootstrap/bootstrap.min.js"></script>
+  
+    <script src="node_modules/underscore/underscore.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
+    <script src="node_modules/flatpickr/dist/flatpickr.js"></script>
+    <script src="node_modules/moment/moment.js"></script>
+    <link rel="stylesheet" href="node_modules/flatpickr/dist/flatpickr.css">
+    
   <!-- <script type="text/javascript">
     $(document).ready(function(){
             Main.load();
@@ -57,26 +60,7 @@
   </style>
 </head>
 <body>
-
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#">Logo</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li><a href="main.html">Home</a></li>
-        <li class="active"><a href="subjects_list.html">Subjects</a></li>
-        <li><a href="providers_list.html">Providers</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<div id='placeholder'></div>
   
 <div class="container-fluid text-center">    
   <div class="row content">
@@ -86,9 +70,12 @@
       </ul>
     </div>
     <div class="col-sm-8 text-left main-container"> 
+        <ul  class="backToPage"> 
+            <li><a href="subjects_list.html">Back to Subject List</a> </li>
+        </ul>
         <h2> Create or Edit a Subject</h2>
         <hr>
-        <p id="errors"></p>
+        <p style="display:none" id="errors"></p>
       <div class="formContainer"><label>Name: </label> <input class="form-control" type="text" id="nameInput"/></div>
       <div class="formContainer"><label>Birth Year: </label> <input class="form-control" type="text" id="ageInput"/></div>
       <div class="formContainer"><label>Gender: </label> <input class="form-control" type="text" id="genderInput"/></div>
@@ -112,7 +99,7 @@
 
 
 </body>
-
+  <script src="templating/header.js"></script>
   <script src="src/api.js"></script>
   <script src="src/subject_edit.js?q=43"></script>
   <script>
