--- a/subjects_list.html
+++ b/subjects_list.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Treeskin</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css?q=122">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="node_modules/jquery/dist/jquery.js"></script>
-  <script src="node_modules/underscore/underscore.js"></script>
-  <script src="node_modules/moment/moment.js"></script>  
-
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-
-  <script src = "node_modules\jquery\external\sizzle\dist\sizzle.js"></script>
-  <script src = "node_modules/js/bootstrap-datepicker.js"></script>
-
+    <title>Treeskin</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css?q=19mocha tutorial with nodejs
+    3">
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+    <script src="node_modules/bootstrap/bootstrap.min.js"></script>
+  
+    <script src="node_modules/underscore/underscore.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
+    <script src="node_modules/flatpickr/dist/flatpickr.js"></script>
+    <script src="node_modules/moment/moment.js"></script>
+    <link rel="stylesheet" href="node_modules/flatpickr/dist/flatpickr.css">
+    
   <!-- <script type="text/javascript">
     $(document).ready(function(){
             Main.load();
@@ -61,26 +63,7 @@
   </style>
 </head>
 <body>
-
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#">Logo</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li><a href="main.html">Home</a></li>
-        <li class="active"><a href="subjects_list.html">Subjects</a></li>
-        <li><a href="providers_list.html">Providers</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<div id='placeholder'></div>
   
 <div class="container-fluid text-center">    
   <div class="row content">
@@ -90,7 +73,7 @@
       <h1>Subject List</h1>
       <hr>
       <p>View, edit, or create new Subject</p>
-      <button onclick="window.location.href='subjects_edit.html?mode=new';">Add Subject</button>
+      <button class="btn" onclick="window.location.href='subjects_edit.html?mode=new';">Add Subject</button>
       <div >
           <table class="table table-striped" id="subjectTable">
             <thead>
@@ -119,7 +102,7 @@
 
 
 </body>
-
+  <script src="templating/header.js"></script>
   <script src="src/api.js"></script>
   <script src="src/subject_list.js?q=125"></script>
   <script>
