masive updates. User accounts/mgnment, new screens.

--- a/account/register.html
+++ b/account/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Reimaged Treeskin - Log In</title>
+    <title>Reimaged Treeskin - Register</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,7 +16,6 @@
     <script src="../node_modules/flatpickr/dist/flatpickr.js"></script>
     <script src="../node_modules/moment/moment.js"></script>
     <link rel="stylesheet" href="../node_modules/flatpickr/dist/flatpickr.css">
-
 
 </head>
 
@@ -33,11 +32,16 @@
                 </div>
 
                 <span class="login100-form-title p-b-37">
-                    Sign In
+                    Register
                 </span>
 
-                <div class="wrap-input100 validate-input m-b-20" data-validate="Enter username or email">
-                    <input class="input100" type="text" name="username" placeholder="username or email">
+                <div class="wrap-input100 validate-input m-b-20" data-validate="Enter email">
+                    <input class="input100" type="text" name="email" placeholder="email">
+                    <span class="focus-input100"></span>
+                </div>
+
+                <div class="wrap-input100 validate-input m-b-25" data-validate="Enter username">
+                    <input class="input100" type="username" name="user" placeholder="username">
                     <span class="focus-input100"></span>
                 </div>
 
@@ -46,16 +50,21 @@
                     <span class="focus-input100"></span>
                 </div>
 
+                <div class="wrap-input100 validate-input m-b-25" data-validate="Confirm password">
+                    <input class="input100" type="password" name="c_pass" placeholder="confirm password">
+                    <span class="focus-input100"></span>
+                </div>
+
                 <div class="container-login100-form-btn">
                     <button class="login100-form-btn">
-                        Sign In
+                        Sign Up
                     </button>
                 </div>
 
 
                 <div class="text-center m-t-25">
-                    <a href="register.html" class="txt2 hov1 ">
-                        Sign Up
+                    <a href="login.html" class="txt2 hov1 ">
+                        Back to Log In
                     </a>
                 </div>
             </form>
@@ -71,10 +80,11 @@
 </body>
 
 <script src="..\src\api.js"></script>
-<script src="src/login.js"></script>
+<script src="src/register.js"></script>
 <script>
     $(document).ready(function(){
-      Login.load();
+      Register.load();
     });
 </script>
+
 </html>
