--- a/subjects_list.html
+++ b/subjects_list.html
@@ -70,10 +70,10 @@
     <div  class="col-sm-2 sidenav-left">
     </div>
     <div class="col-sm-8 text-left main-content" style="left:16.5%;"> 
-      <h1>Subject List</h1>
+      <h1>Manage Herd</h1>
       <hr>
-      <p>View, edit, or create new Subject</p>
-      <button class="btn" onclick="window.location.href='subjects_edit.html?mode=new';">Add Subject</button>
+      <p>View, edit, or create new Herd Member</p>
+      <button class="btn" onclick="window.location.href='subjects_edit.html?mode=new';">Add</button>
       <div >
           <table class="table table-striped" id="subjectTable">
             <thead>
@@ -89,9 +89,6 @@
           </table>
 
       </div>
-    </div>
-    <div id="categoryList" class="col-sm-2 sidenav-right">
-      <!---->
     </div>
   </div>
 </div>
