Change poages to account for user specific

--- a/alerts_edit.html
+++ b/alerts_edit.html
@@ -78,8 +78,8 @@
         <hr>
         <p style="display:none" id="errors"></p>
       <div class="formContainer"><label>Name: </label> <input class="form-control" type="text" id="nameInput"/></div>
-      <div class="formContainer"><label>For: </label> 
-        <select class="form-control" type="text" id="forInput">
+      <div  class="formContainer"><label>For: </label> 
+        <select id="subjectDD" class="form-control" type="text">
             <option value="">Select</option>                
         </select>
         </div>
