--- a/alerts_list.html
+++ b/alerts_list.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css?q=19mocha tutorial with nodejs
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css?q=19mocha tutorial with nodejs
     3">
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
@@ -83,10 +83,7 @@
     </br>
       <label>Filter by Individual</label>
       <select class="form-control" id="filterByInv">
-        <option>None</option>          
-          <option>Julius</option>
-          <option>Scooter</option>   
-          <option>Buster</option>                           
+        <option>None</option>                                 
       </select>
       <div >
           <table class="table table-striped" id="alertTable">
